Issue #3278745: Overflow clipping dropbutton

--- a/styles/base/_layers.scss
+++ b/styles/base/_layers.scss
@@ -69,9 +69,4 @@
   @include mq($breakpointSmall) {
     padding: 1.5rem;
   }
-
-  @include mq($breakpointLarge) {
-    min-width: 100%;
-    width: fit-content;
-  }
 }
